--- a/phage_host_protein_pair/notebooks/01_data_exploration_and_labelling.ipynb
+++ b/phage_host_protein_pair/notebooks/01_data_exploration_and_labelling.ipynb
@@ -920,6 +920,13 @@
    "source": [
     "#############################"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BANANAAAAAAAAAAAAAAAAAAAAA"
+   ]
   }
  ],
  "metadata": {
