--- a/phage_host_protein_pair/notebooks/01_data_exploration_and_labelling.ipynb
+++ b/phage_host_protein_pair/notebooks/01_data_exploration_and_labelling.ipynb
@@ -927,6 +927,13 @@
    "source": [
     "# BANANAAAAAAAAAAAAAAAAAAAAA"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## bananina\n"
+   ]
   }
  ],
  "metadata": {
