--- a/phage_host_protein_pair/notebooks/02_transform_data.ipynb
+++ b/phage_host_protein_pair/notebooks/02_transform_data.ipynb
@@ -561,7 +561,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. "
+    "## 3. Explore protein_NN distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'protein_NN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\PFED\\Projects\\T\\phage_host_protein_pair\\notebooks\\02_transform_data.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PFED/Projects/T/phage_host_protein_pair/notebooks/02_transform_data.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Explore distribution of protein_NN tail_fiber\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PFED/Projects/T/phage_host_protein_pair/notebooks/02_transform_data.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m display(protein_NN[\u001b[39m'\u001b[39m\u001b[39mtail_fiber\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'protein_NN' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Explore distribution of protein_NN tail_fiber and plot\n",
+    "display(protein_NN['tail_fiber'].value_counts())\n",
+    "\n",
+    "# Plot\n",
+    "protein_NN['tail_fiber'].value_counts().plot(kind='bar')\n"
    ]
   },
   {
@@ -595,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
